# SMITE-v1.1

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  load_procedures.sh
migrations/: create_tables.sql  procedures.sql
src/: blacklist.rs  main.rs
src/api/: mod.rs
src/api/unbelievaboat/: client.rs  mod.rs  models.rs
src/commands/: balance.rs  board.rs  create_currency.rs  help.rs  info.rs  mint.rs  mod.rs  ping.rs  price.rs  send.rs  swap.rs  tax.rs  transaction.rs  wire.rs
src/db/: account.rs  api.rs  currency.rs  mod.rs  swap.rs  tax.rs  tradelog.rs  transaction.rs
src/models/: balance.rs  chart.rs  create_currency.rs  currency.rs  mint.rs  mod.rs  ping.rs  price.rs  send.rs  swap.rs  transaction.rs  wire.rs
src/services/: balance_service.rs  board_service.rs  chart_service.rs  create_currency_service.rs  info_service.rs  mint_service.rs  mod.rs  permission_service.rs  ping_service.rs  price_service.rs  send_service.rs  swap_service.rs  tax_service.rs  transaction_service.rs  wire_service.rs
src/utils/: encryption.rs  errors.rs  mod.rs  page.rs  ratelimit.rs  table.rs  ub_ratelimit.rs
