[package]
name = "smite-v1p1"
version = "1.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "utils"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql"] }
uuid = { version = "1.6", features = ["v4"] }
lazy_static = "1.4.0"
