[package]
name = "smite-v1p1"
version = "1.1.2"
edition = "2021"
authors = ["PSG420 <psg420@protonmail.com>", "JustinVijar <justinvijar21@protonmail.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/psg4220/SMITE-v1.1"


[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "utils"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "mysql"] }
uuid = { version = "1.6", features = ["v4"] }
lazy_static = "1.4.0"
plotters = "0.3.7"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.21"
thiserror = "1.0"